force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Skiving_Station_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Skiving_Station_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skiving Station Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards (Skiving Station Work Schedule)</relationshipLabel>
    <relationshipName>Job_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>