force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Stages__c.field-meta.xml
<CustomField>
    <fullName>ETT_Stages__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Stages</valueSetName>
    </valueSet>
</CustomField>