force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Thread_Least_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Thread_Least_Available_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread Least Available Time</label>
    <type>DateTime</type>
</CustomField>