force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Thread_Preparation_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Thread_Preparation_Status__c</fullName>
    <label>Thread Preparation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Card_Stage_Statusus</valueSetName>
    </valueSet>
</CustomField>