force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Thread_Preparation_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Thread_Preparation_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thread Preparation Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards (Thread Preparation Work Schedule)</relationshipLabel>
    <relationshipName>Job_Cards2</relationshipName>
    <type>Lookup</type>
</CustomField>