force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Tread_Master_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Master_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tread Master Allocation</label>
    <referenceTo>ETT_Tools_Allocation__c</referenceTo>
    <relationshipLabel>Job Cards</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>