force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Tread_Width__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Width__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tread Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>