force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Tyre_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Master</label>
    <referenceTo>ETT_Tyre_Master__c</referenceTo>
    <relationshipLabel>Job Cards</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>