force-app/main/default/objects/ETT_Job_Card__c/fields/Filling_Technician__c.field-meta.xml
<CustomField>
    <fullName>Filling_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filling Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards4</relationshipName>
    <type>Lookup</type>
</CustomField>