force-app/main/default/objects/ETT_Job_Card__c/fields/Filling_Winter_Halt_Time__c.field-meta.xml
<CustomField>
    <fullName>Filling_Winter_Halt_Time__c</fullName>
    <formula>IF( MONTH(DATEVALUE(ETT_Cementing_End_Time_new__c ))&gt;3 &amp;&amp; MONTH(DATEVALUE(ETT_Cementing_End_Time_new__c ))&lt;11 , (Now()- ETT_Cementing_End_Time_new__c )*24*60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filling Winter Halt Time(Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>