force-app/main/default/objects/ETT_Job_Card__c/fields/FM_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>FM_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Approval Required</label>
    <type>Checkbox</type>
</CustomField>