force-app/main/default/objects/ETT_Job_Card__c/fields/Guage_Pressure_Valve_Number__c.field-meta.xml
<CustomField>
    <fullName>Guage_Pressure_Valve_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guage-Pressure Valve Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>