force-app/main/default/objects/ETT_Job_Card__c/fields/Job_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Card_Status__c</fullName>
    <label>Job Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <default>true</default>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>