force-app/main/default/objects/ETT_Job_Card__c/fields/Misc_Issue_Err_Msg__c.field-meta.xml
<CustomField>
    <fullName>Misc_Issue_Err_Msg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Issue Err Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>