force-app/main/default/objects/ETT_Job_Card__c/fields/Misc_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Misc_Issue_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Issue Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>