force-app/main/default/objects/ETT_Job_Card__c/fields/Painting_Technician_name__c.field-meta.xml
<CustomField>
    <fullName>Painting_Technician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Painting Technician name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>