force-app/main/default/objects/ETT_Job_Card__c/fields/Quality_Control_status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_status__c</fullName>
    <label>Quality Control status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Card_Stage_Statusus</valueSetName>
    </valueSet>
</CustomField>