force-app/main/default/objects/ETT_Job_Card__c/fields/Quality_control_Tech__c.field-meta.xml
<CustomField>
    <fullName>Quality_control_Tech__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality control Technician Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>