force-app/main/default/objects/ETT_Job_Card__c/fields/Quality_Control_Technician__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Control Technician</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Job Cards (Quality Control Technician)</relationshipLabel>
    <relationshipName>Job_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>