force-app/main/default/objects/ETT_Job_Card__c/fields/Quality_Control_Technician_name__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Technician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality Control Technician name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>