force-app/main/default/objects/ETT_Job_Card__c/fields/Removal_of_rimtube_flap_technician_name__c.field-meta.xml
<CustomField>
    <fullName>Removal_of_rimtube_flap_technician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Removal of rimtube flap technician name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>