force-app/main/default/objects/ETT_Job_Card__c/fields/Removal_of_rimtube_technician__c.field-meta.xml
<CustomField>
    <fullName>Removal_of_rimtube_technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Removal of rimtube technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards9</relationshipName>
    <type>Lookup</type>
</CustomField>