force-app/main/default/objects/ETT_Job_Card__c/fields/Repair_technician__c.field-meta.xml
<CustomField>
    <fullName>Repair_technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards2</relationshipName>
    <type>Lookup</type>
</CustomField>