force-app/main/default/objects/ETT_Job_Card__c/fields/Rimming_Enveloping_Technician__c.field-meta.xml
<CustomField>
    <fullName>Rimming_Enveloping_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rimming &amp; Enveloping Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards7</relationshipName>
    <type>Lookup</type>
</CustomField>