force-app/main/default/objects/ETT_Job_Card__c/fields/Rimming_Enveloping_technician_name__c.field-meta.xml
<CustomField>
    <fullName>Rimming_Enveloping_technician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rimming&amp;Enveloping technician name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>