force-app/main/default/objects/ETT_Job_Card__c/fields/Skiving_Technician__c.field-meta.xml
<CustomField>
    <fullName>Skiving_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skiving Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>