force-app/main/default/objects/ETT_Job_Card__c/fields/Thread_Cut_Section_Cemented_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Thread_Cut_Section_Cemented_End_Time__c</fullName>
    <description>Thread Cut Section Cemented Check activity end time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread Cut Section Cemented End Time</label>
    <type>DateTime</type>
</CustomField>