force-app/main/default/objects/ETT_Job_Card__c/fields/Thread_pre_Supervisor_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Thread_pre_Supervisor_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread pre Supervisor Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>