force-app/main/default/objects/ETT_Job_Card__c/fields/Thread_pre_Technician__c.field-meta.xml
<CustomField>
    <fullName>Thread_pre_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thread pre Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards3</relationshipName>
    <type>Lookup</type>
</CustomField>