force-app/main/default/objects/ETT_Job_Card__c/fields/Thread_pre_Technician_name__c.field-meta.xml
<CustomField>
    <fullName>Thread_pre_Technician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread pre Technician name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>