force-app/main/default/objects/ETT_Job_Card__c/fields/Tyre_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inventory</label>
    <referenceTo>ETT_Tyre_Inventory__c</referenceTo>
    <relationshipLabel>Job Cards</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>