force-app/main/default/objects/ETT_Job_Card__c/fields/Voccum_Valve_Number__c.field-meta.xml
<CustomField>
    <fullName>Voccum_Valve_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voccum Valve Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>