force-app/main/default/objects/ETT_Job_Card__c/listViews/Filling_Crossed_Over_12_hrs.listView-meta.xml
<ListView>
    <fullName>Filling_Crossed_Over_12_hrs</fullName>
    <columns>NAME</columns>
    <columns>ETT_Priority__c</columns>
    <columns>ETT_Stages__c</columns>
    <columns>ETT_Overall_Status__c</columns>
    <columns>ETT_Inspection_Card__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETT_Filling_End_Time_new__c</columns>
    <columns>ETT_Filling_Acceptance_Decision__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETT_Filling_Acceptance_Decision__c</field>
        <operation>equals</operation>
        <value>Re-Filling Required</value>
    </filters>
    <label>Filling Crossed Over 12 hrs</label>
    <language>en_US</language>
</ListView>